--- a/modules/_icons-view.scss
+++ b/modules/_icons-view.scss
@@ -47,6 +47,7 @@
 				height: 100%;
 				width: 100%;
 				position: relative;
+				overflow: hidden;
 			}
 		}
 
